# cicd_practice

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: calculator.h  logger.h
src/: calculator.cpp  logger.cpp  main.cpp
test/integration/: test_combined.cpp
test/unit/: test_calculator.cpp  test_logger.cpp
